temp commit for DB

--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "start": "NODE_ENV=production tsx server/index.ts",
     "railway": "NODE_ENV=production tsx server/index.ts",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:migrate": "psql \"$DATABASE_URL\" -f migrations/001_initial_enhanced_schema.sql",
+    "db:test": "psql \"$DATABASE_URL\" -c \"SELECT 1\"",
+    "db:tables": "psql \"$DATABASE_URL\" -c \"\\dt\"",
+    "gcloud:setup": "./scripts/setup-google-cloud.sh",
+    "gcloud:backup": "gcloud sql export sql $DB_INSTANCE_NAME gs://$GCS_BUCKET/backups/backup-$(date +%Y%m%d-%H%M%S).sql --database=$DB_NAME"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.17.2",
     "@google/genai": "^1.19.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -56,7 +62,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.2",
-    "drizzle-orm": "^0.39.1",
+    "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
@@ -70,6 +76,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pdf-parse": "^1.1.1",
+    "postgres": "^3.4.7",
     "puppeteer": "^23.5.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
