--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "dev:debug": "NODE_ENV=development tsx --inspect=9229 server/index.ts",
     "dev:debug-brk": "NODE_ENV=development tsx --inspect-brk=9229 server/index.ts",
-    "build": "echo 'Build skipped for Railway - using tsx directly'",
+    "build": "vite build",
+    "build:client": "vite build",
     "start": "NODE_ENV=production tsx server/index.ts",
     "railway": "NODE_ENV=production tsx server/index.ts",
     "check": "tsc",
@@ -55,6 +56,7 @@
     "@types/multer": "^2.0.0",
     "@types/pdf-parse": "^1.1.5",
     "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -67,8 +69,11 @@
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "firebase": "^12.5.0",
+    "firebase-admin": "^13.5.0",
     "framer-motion": "^11.18.2",
     "input-otp": "^1.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "multer": "^2.0.2",
@@ -97,10 +102,12 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.0",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
