DB setup, authentication, and initial public data analysis

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,18 @@ vite.config.ts.*
 .idea
 .env
 .env.*
+!.env.example
 .local
 .vscode
 uploads/
 
-# Lock files - let Railway generate fresh ones
+# Service account keys (CRITICAL - DO NOT COMMIT!)
+*service-account*.json
+gcloud-service-account-key.json
+
+# Firebase
+.firebase/
+firebase-debug.log
+firebaserc
+
 package-lock.json
