--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ firebase-debug.log
 firebaserc
 
 package-lock.json
+# Environment variable files (contain secrets)
+env-vars.yaml
+*.env.yaml
+cloud-run-env-vars.txt
